--- a/home.html
+++ b/home.html
@@ -41,7 +41,11 @@
         </p>
         <p id="papel" onclick="papel()"><i class="fa-solid fa-hand"></i></p>
         <p id="tesoura" onclick="tesoura()"><i class="fa-solid fa-hand-scissors fa-rotate-90"></i></p>
-
+    </div>
+    <div id="box_limite">
+        <div id="sub"> - </div>
+        <div id="number"><p id="digt">5</div>
+        <div id="sum"> + </div>
     </div>
 </body>
 <script src="script.js"></script>
