--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
     </div>
     <div id="box_limite">
         <div id="sub" onclick="LevelDown()"> - </div>
-        <div id="number"><p id="digt"></div>
+        <div id="number"><p id="digt">3</div>
         <div id="sum" onclick="LevelUp()"> + </div>
     </div>
 </body>
