--- a/home.html
+++ b/home.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+    <div class="border-sup">
+        <a href="https://meusprojetos-pld.netlify.app" target="_self">
+            <div class="btn_home">
+                <i id="home" class="fa-solid fa-house"></i>
+             <p class="n_home">Home</p>
+            </div>
+        </a>
+        <input id="chk"type="checkbox"  onclick="mode_L()">
+        <label for="chk" class="switch">
+         <span class="slider"></span>
+        </label>
+    </div>
     <div id="placar">
         <div id="versus">
 
